[package]
name = "warp-engine"
version = "0.1.0"
authors = ["Theo Dedeken <theo.dedeken@telenet.be>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
#wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }
wasm-bindgen = "^0.2.13"
webgl-rs = "^0.1.0"
#glenum-bindgen = { path = "../glenum-bindgen" }
#webgl2-bindgen = { path = "../webgl2-bindgen" }
